2020-12-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/svg.c (ReadSVGImage): Properly support 'ping' mode so
	'identify' works as expected.

	* magick/render.c (InsertAttributeIntoInputStream): Provide a more
	useful diagnostic for when a "use" or "class" argument id is not
	defined.

2020-12-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Fix regression when parsing "mask"
	which was added by changeset 16305:f33a0fb3d8e4 on July 15, 2020
	since the last formal release.  This impacts MVG and SVG.

2020-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/INSTALL-unix.rst: Document the '--disable-compressed-files'
	configure option, which was added on July 15th.

2020-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magic.c: Don't send files which test positive for PCL to
	the HPGL delegate, which is normally 'hp2xx'.  Fixes SourceForge
	bug 607 "Slow to convert HP PCL printer data".

2020-12-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Use unique image attribute space
	for MVG symbols.  Fixes oss-fuzz 28111 "Timeout -
	coder_MVG_fuzzer", oss-fuzz 28170 "Stack-overflow - DrawImage",
	and oss-fuzz 28292 "Integer-overflow - DrawPolygonPrimitive".

2020-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (DrawImage): Verify that affine scaling factors
	are not zero.  Fixes oss-fuzz 28293 "Divide-by-zero -
	InverseAffineMatrix".
	(DrawPolygonPrimitive): Thread error status check was at wrong
	scope, resulting in code executing when it should have quit.

2020-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Stop trying to define PTRDIFF_MAX.

2020-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Provide PTRDIFF_MAX for Visual Studio
	if it is missing.

	* fuzzing/oss-fuzz-build.sh: Disable old JPEG support in libtiff.
