@@ -38,6 +38,10 @@
 <p>2020-12-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>magick/render.c (DrawImage): Set '[MVG]' image attribute at
+appropriate places outside of DrawImage() since DrawImage()
+sometimes recurses into itself, trashing the image attribute.  One
+example of recursion is in the text annotation code.</li>
 <li>coders/svg.c (ReadSVGImage): Properly support 'ping' mode so
 'identify' works as expected.</li>
 <li>magick/render.c (InsertAttributeIntoInputStream): Provide a more
